<resources>
    <string name="app_name">MusicPlayer</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="empty_queue">No songs in queue</string>
    <string name="group_one_title">Music</string>
    <string name="directories">Directories</string>
    <string name="playlists">Playlists</string>
    <string name="now_playing">Now Playing</string>
    <string name="group_two_title">Settings</string>
    <string name="sync_device">Sync Music</string>
    <string name="advanced_settings">Advanced Settings</string>
    <string name="empty">Empty</string>
    <string name="playlist">Playlist</string>
    <string name="create_playlist">Create Playlist</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="dummy_song">Dummy Song</string>
    <string name="dummy_artist">Dummy Artist</string>
    <string name="_00_00">00:00</string>
    <string name="empty_playlist">There are no saved playlists.</string>
    <string name="next_song">Next Song</string>
    <string name="play_and_pause">Play and Pause</string>
    <string name="previous_song">Previous Song</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="add_to_now_playing_list">Add to queue</string>
    <string name="clear_now_playing_list_and_play">Clear queue and play</string>
    <string name="fetching_songs">Fetching Songs</string>
    <string name="songs_fetched_0_0">Songs Fetched : 0/0</string>
    <string name="search_songs">Search Songs</string>
    <string name="search_music">Search Music</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="create_new_playlist">Create New Playlist</string>
    <string name="already_created">Already Created</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <string name="save_as_playlist">Save as playlist</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="action_overflow">Options</string>
    <string name="remove">Remove</string>
    <string name="processing">Processing ...</string>
    <string name="general">GENERAL</string>
    <string name="sleep_timer">Sleep Timer</string>
    <string name="sleep_timer_explanation">Set a time to stop your music player.</string>
</resources>
