<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item android:title="@string/group_one_title">
            <menu>
                <item
                    android:id="@+id/home"
                    android:icon="@drawable/ic_folder_white"
                    android:title="@string/directories" />

                <item
                    android:id="@+id/playlists"
                    android:icon="@drawable/ic_playlist_add_white"
                    android:title="@string/playlists" />

                <item
                    android:id="@+id/queue"
                    android:icon="@drawable/ic_queue_music_white"
                    android:title="@string/now_playing" />
            </menu>
        </item>

    </group>
    <group
        android:id="@+id/group2"
        android:checkableBehavior="single">
        <item android:title="@string/group_two_title">
            <menu>
                <item android:id="@+id/resync_device"
                    android:icon="@drawable/ic_action_refresh"
                    android:title="@string/sync_device"/>
                <item
                    android:id="@+id/music_settings"
                    android:icon="@drawable/ic_action_settings"
                    android:title="@string/advanced_settings" />
            </menu>
        </item>

    </group>
</menu>