<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:visibility="visible">

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#212121" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/music_player_height"
        android:layout_below="@id/divider"
        android:background="@color/colorPrimary">

        <ImageView
            android:contentDescription="@string/thumbnail"
            android:id="@+id/iv_selected_song_thumbnail"
            android:layout_width="@dimen/music_player_height"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@drawable/music" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toEndOf="@id/iv_selected_song_thumbnail"
            android:layout_toRightOf="@id/iv_selected_song_thumbnail"
            android:padding="@dimen/dp_10">

            <TextView
                android:id="@+id/tv_selected_song"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/dummy_song"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_16" />

            <TextView
                android:id="@+id/tv_selected_song_artist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_selected_song"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/dummy_artist"
                android:textColor="@color/white" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_selected_song_artist"
                android:layout_marginTop="@dimen/dp_10"
                android:gravity="center_horizontal">

                <ImageView
                    android:contentDescription="@string/previous_song"
                    android:id="@+id/iv_previous_song"
                    android:layout_width="@dimen/play_pause_size"
                    android:layout_height="@dimen/play_pause_size"
                    android:clickable="true"
                    android:layout_marginRight="@dimen/dp_10"
                    android:layout_marginEnd="@dimen/dp_10"
                    android:src="@drawable/ic_action_previous" />

                <ImageView
                    android:contentDescription="@string/play_and_pause"
                    android:id="@+id/iv_play_pause_button"
                    android:layout_width="@dimen/play_pause_size"
                    android:layout_height="@dimen/play_pause_size"
                    android:clickable="true"
                    android:layout_marginRight="@dimen/dp_10"
                    android:layout_marginEnd="@dimen/dp_10"
                    android:src="@drawable/ic_action_pause" />

                <ImageView
                    android:contentDescription="@string/next_song"
                    android:id="@+id/iv_next_song"
                    android:layout_width="@dimen/play_pause_size"
                    android:layout_height="@dimen/play_pause_size"
                    android:clickable="true"
                    android:src="@drawable/ic_action_next" />
            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>