<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/AppCustomRowRelativeLayout">

    <LinearLayout
        android:id="@+id/ll_upper_layout"
        style="@style/AppLinearLayoutWrapHorizontal">

        <com.quovantis.musicplayer.updated.utility.CircleImageView
            android:id="@+id/iv_song_thumbnail"
            style="@style/AppCircularImage"
            android:src="@drawable/music"
            app:civ_border_color="@color/colorAccent"
            app:civ_border_width="1dp" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tv_queue_song_title"
                style="@style/AppSongsTextView"
                android:text="@string/dummy_song"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_16" />

            <TextView
                android:id="@+id/tv_queue_song_artist"
                style="@style/AppSongsTextView"
                android:layout_below="@+id/tv_queue_song_title"
                android:text="@string/dummy_artist" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/ll_drag_icon"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <es.claucookie.miniequalizerlibrary.EqualizerView xmlns:custom="http://schemas.android.com/apk/res-auto"
                android:id="@+id/equalizer_view"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:visibility="invisible"
                custom:foregroundColor="@color/colorAccent" />

            <ImageView
                android:id="@+id/iv_options"
                style="@style/AppOptionImageView"
                android:contentDescription="@string/action_overflow"
                android:src="@drawable/action_overflow" />
        </LinearLayout>
    </LinearLayout>

    <View
        style="@style/AppDivider"
        android:layout_below="@+id/ll_upper_layout"
        android:background="@color/grey" />
</RelativeLayout>